Fixed jumping screen on buttons click (with clearfix on body) + fixed corner issue in quizzes

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.css
@@ -262,6 +262,7 @@
 }
 .quiz .bottom .corner {
   fill: #181c1d;
+  background: #181c1d;
 }
 .quiz .details {
   background: #323538;
