--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -812,9 +812,8 @@
 
         .corner {
             position: absolute;
-            bottom: -1px;
-            right: -1px /*rtl:ignore*/;
-            width: 32%;
+            bottom: 0;
+            right: 0 /*rtl:ignore*/;
             height: 40%;
         }
     }
