--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -617,9 +617,8 @@
 }
 .quiz .bottom .corner {
   position: absolute;
-  bottom: -1px;
-  right: -1px ;
-  width: 32%;
+  bottom: 0;
+  right: 0 ;
   height: 40%;
 }
 .quiz .stats {
