--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
@@ -373,6 +373,7 @@
 
             .corner {
                 fill: @backgroundColor;
+                background: @backgroundColor;
             }
         }
 
