--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
@@ -608,6 +608,7 @@ Page Loading
 }
 .theme-light .quiz .bottom .corner {
   fill: #e9eaed;
+  background: #e9eaed;
 }
 .theme-light .quiz .details {
   background: #ffffff;
